public/style.css
* {
	margin: 0px;
	padding: 0px;
	outline: none;
	border: 0px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

*,
:after,
:before {
	box-sizing: border-box;
}

body,
html {
	height: 100%;
}

header {
	background: -webkit-linear-gradient(199deg, rgba(2, 2, 2, 0) 44%, rgb(0, 0, 0) 100%);
	background: -o-linear-gradient(199deg, rgba(2, 2, 2, 0) 44%, rgb(0, 0, 0) 100%);
	background: -moz-linear-gradient(199deg, rgba(2, 2, 2, 0) 44%, rgb(0, 0, 0) 100%);
	background: linear-gradient(199deg, rgba(2, 2, 2, 0) 44%, rgb(0, 0, 0) 100%);
	background-color: black;
	background: #000000;
	opacity: 0.95;
	background-image: url(./img/headerbackground.jpg);
	background-size: 100% 100%;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	height: 100vh;
	min-height: 100%;
}

.header-text {
	font-family: 'Oswald', sans-serif;
	font-size: 4rem;
	color: #ffffff;
	text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
	border-color: black;
}
.container {
	height: 100%;
}


.container-text {
	position: absolute;
	top: 35%;
}

.job-text,
.job-text2,
.job-text3 {
	font-family: 'Oswald', sans-serif;
	font-size: 2.9rem;
	color: #ffffff;
	display: inline-block;
	text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
	border-color: black;
}

@-moz-keyframes fade-in {
	50% {
		opacity: 0;
	}

	75% {
		opacity: 1;
	}
	100% {
		opacity: 0;
	}
}

@-webkit-keyframes fade-in {
	50% {
		opacity: 0;
	}

	75% {
		opacity: 1;
	}
	100% {
		opacity: 0;
	}
}

.job-text {
	padding-bottom: 1%;
}

.job-text2 {
	display: inline;
	-webkit-animation: fade-in 6s infinite;
	opacity: 0;
}
.job-text3 {
	position: absolute;
	left: 15%;
	opacity: 0;
	display: inline;
	-webkit-animation: fade-in 6s infinite;
	-webkit-animation-delay: 3s;
}

.scroll-text {
	display: inline;
}

.trigger {
	display: block;
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
	background: -moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
	background: -webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
	background: -o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
	background: -ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
	background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa',GradientType=0);
	background-color: #2dabf9;
	-moz-border-radius: 34px;
	-webkit-border-radius: 34px;
	border-radius: 34px;
	border: 1px solid #0b0e07;
	cursor: pointer;
	color: #ffffff;
	font-family: 'Oswald', sans-serif;
	font-size: 1rem;
	padding: 7px 40px;
	text-decoration: none;
	text-shadow: 0px 2px 7px #263666;
	position: absolute;
	left: 50%;
	bottom: 20%;
	transform: translateX(-45%);
}

.trigger:hover {
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
	background: -moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
	background: -webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
	background: -o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
	background: -ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
	background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9',GradientType=0);
	background-color: #0688fa;
	color: #ffffff;
	text-decoration: none;
}

.other {
	text-align: center;
}
.project-text {
	color: #f7681b;
	font-family: 'Oswald', sans-serif;
	font-size: 1.5rem;
	position: absolute;
	bottom: 7%;
	left: 50%;
	text-align: center;
	border: 1px;
	text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
	border-color: black;
	-moz-text-stroke-width: 1px;
	-moz-text-stroke-color: black;
	transform: translateX(-41%);
}

.modal {
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	/* opacity: 0; */
	visibility: hidden;
	transform: scale(1.1);
	transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
	z-index: 3;
}
.modal-content {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 60%;
	height: 69%;
	overflow: hidden;
	border-radius: 0.5rem;
	z-index: 3;
}

.about-me-info,
.contact-info {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: 100%;
	overflow-y: auto;
	justify-content: center;
	text-align: center;
}

.no-scroll {
    overflow: hidden;
}


.about-me-info {
	float: left;
	width: 50%;
	height: 100%;
	color: #ffffff;
	background-color: #262626;
	font-family: 'Montserrat', sans-serif;
	background-image: url(./img/test3.3.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
}

.about-me-scroll-text {
	display: inline-block;
	text-align: left;
	padding-top: 3%;
	padding-left: 20%;
}

.about-me-job-text-web,
.about-me-job-text-net,
.about-me-job-text {
	display: inline-block;
}

.about-me-job-text-web {
	-webkit-animation: fade-in 6s infinite;
	opacity: 0;
}
.about-me-job-text-net {
	opacity: 0;
	position: absolute;
	left: 10%;
	-webkit-animation: fade-in 6s infinite;
	-webkit-animation-delay: 3s;
}

.about-me-title,
.about-me-job {
	text-align: left;
}
.about-me-title {
	padding-top: 2%;
	padding-left: 20%;
}

.about-me-job {
	padding-top: 5%;
	padding-left: 20%;
}

.about-me-text {
	padding-top: 3%;
	padding-right: 20%;
	padding-left: 20%;
	text-align: justify;
}

.skill-icon {
	float: left;
	display: inline-block;
	padding-left: 18%;
}

#javascript-icon,
#css-icon,
#react-icon,
#html-icon,
#nodejs-icon,
#bootstrap-icon,
#sql-icon,
#csharp-icon {
	display: inline-block;
	padding: 15px;
	font-size: 3rem;
	float: left;
}

#javascript-icon:hover {
	color: #f4c542;
}

#css-icon:hover {
	color: #4192f4;
}

#react-icon:hover {
	color: #41e8f4;
}

#html-icon:hover {
	color: #f47142;
}

#nodejs-icon:hover {
	color: #6afc64;
}
/* ... */

